styles/main.css
* {
    font-family: sans-serif;
}

body {
    background: #419F6C;
    padding: 0.5vw 2vw;
}

#menu {
    width: 100%;
    height: 5vw;
    max-height: 53px;
}

.menu-button {
    float: left;
    width: 10vw;
    height: 5vw;

    max-height: 50px;
    max-width: 100px;
    background: darkgreen;
    
    border: solid black 1px;
    border-bottom: black solid 3px;
    border-left: black solid 3px;
    border-radius: 10px;
    margin-right: 0.5vw;
}

.menu-button:hover {
    background: lightgreen;
}

.menu-button p {
    font-size: 100%;
    color: white;
    text-align: center;
    margin: auto;
    margin-top: 16%
}

#content {
    clear: left;
}

.task {
    float: left;
    padding: 2vw;
}

h1 {
    font-size: 2em;
    text-decoration: underline;
}

h4 {
    font-size: 1.6em;
    text-decoration: underline;
}

h5 {
    font-size: 1.3em;
}

#information p, li {
    font-size: 1.1em;
}

.NYI {
    color: black;
    background: red;
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    border: purple 1vw solid;
}

.NYI:hover {
    text-decoration: none;
    background: yellow;
}

